--- a/style.css
+++ b/style.css
@@ -75,8 +75,37 @@
     justify-content: space-between;
 }
 
+/*--------- search bar ---------*/
+
+form{
+    width: 50%;
+    background-color: rgba(0, 0,0, 0.2);
+    display: flex;
+    align-items: center;
+    border-radius: 60px;
+    padding: 6px 16px;
+}
+
 input{
-    padding: 5px;
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 20px;
+    background: transparent;
+    border: 0;
+    flex: 1;
+    outline: none;
+    color: black;
+    padding: 4px 4px;
+    font-size: 16px;
+}
+
+form button img{
+    width: 100%;
+    height: 100%;
+}
+
+form button{
+    border: 0;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    background-color:  transparent;
 }
