--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@
     font-size: 24px;
 }
 
+/*---------------------HEADER------------------------*/
+
 /* ----------- SEARCH section --------------*/
 .container .top_part{
     grid-row: 1/3;
@@ -70,7 +72,7 @@
     padding-left: 40px;
 }
 
-.container .search1{
+.container .search{
     display: flex;
     justify-content: space-between;
 }
@@ -83,7 +85,7 @@ form{
     display: flex;
     align-items: center;
     border-radius: 60px;
-    padding: 6px 16px;
+    padding: 3px 11px;
 }
 
 input{
@@ -104,8 +106,19 @@ form button img{
 form button{
     border: 0;
     border-radius: 50%;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
     background-color:  transparent;
+}
+
+/*----Remaining elements-----*/
+
+.top_part .search .icons_header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 30px;
+    flex: 1;
+    gap: 15px;
 }
