Create responsive rows and columns for cards
The cards contained in the area where the user can have his cards with
custom information now are able to create columns and rows according
to the space available. This was made by using the repeat() function
in conjunction with auto-fit and the minmax() function when creating
the rows and columns.

Likewise, each card was given a white background and border-radius.

--- a/style.css
+++ b/style.css
@@ -230,3 +230,19 @@ form button{
     flex-direction: column;
     justify-content: space-evenly;
 }
+
+/* Responsive section */
+.project_container .projects {
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+}
+
+.project_container .projects > div{
+    background-color: white;
+    border-radius: 5px;
+    height: 200px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
