--- a/style.css
+++ b/style.css
@@ -214,11 +214,15 @@ form button{
     grid-template-rows: 50px 1fr;
 }
 
+/* titulos generales de cartas*/
+
 .title_trending,
 .title_announcements,
 .title_projects{
     align-self: center;
     justify-self: flex-start;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 .body_announcements,
@@ -234,15 +238,19 @@ form button{
 /* Responsive section */
 .project_container .projects {
     display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
 }
 
-.project_container .projects > div{
+.project_container .projects .card{
     background-color: white;
     border-radius: 5px;
-    height: 200px;
     text-overflow: ellipsis;
     overflow: hidden;
+    height: 200px;
+
+    display: flex;
+    flex-direction: column;
+    
 }
