Add ellipsis to prevent overflow across vertical axis
This was made possible with the help of -webkit-box in the cards, which
allowed to specify the number of lines that the text is allowed to
span, but once that limit is surpased it ends with three dots.

The titles of the cards were given a bigger font as well as the titles
of these section, that is: Your projects, Announcements, and Trendings.

--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ form button{
 .title_projects{
     align-self: center;
     justify-self: flex-start;
-    font-size: 16px;
+    font-size: 22px;
     font-weight: 600;
 }
 
@@ -246,11 +246,25 @@ form button{
 .project_container .projects .card{
     background-color: white;
     border-radius: 5px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    height: 200px;
 
+    height: 150px;
     display: flex;
     flex-direction: column;
-    
+    padding: 40px 30px;
+}
+
+.projects .card .text{
+    display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.project_container .card .title{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 20px;
+    font-weight: 600;
 }
