Wrapp title and text of cards and position options
In the HTML file the title and the text of the cards were wrapped, so
when in the CSS file those containers were defined as flex with a
direction column, the title and the text remain toghether but the
options can be placed at the bottom by setting space-between.

--- a/style.css
+++ b/style.css
@@ -268,3 +268,13 @@ form button{
     font-size: 20px;
     font-weight: 600;
 }
+
+.projects .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.projects .card .options{
+    align-self: flex-end;
+}
