--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ form button{
 .container .body {
     grid-column: 2/-1;
     grid-row: 3/-1;
-    background-color: rgba(0, 0,0, 0.2);
+    background-color: rgba(117, 117, 117, 0.2);
     display: grid;
     grid-template-columns: 1fr 0.3fr;
     grid-template-rows: 1fr;
@@ -201,6 +201,7 @@ form button{
     display: grid;
     grid-template-rows: 50px 1fr;
     padding-right: 50px;
+    padding-left: 15px;
 }
 
 .body .left_sidebar{
@@ -240,25 +241,28 @@ form button{
     display: grid;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
+    gap: 30px;
 }
 
 .project_container .projects .card{
     background-color: white;
-    border-radius: 5px;
+    border-radius: 15px;
 
+    box-shadow: -7px 0 0 rgb(233, 173, 8), 3px 3px rgba(0, 0, 0, 0.048);
     height: 150px;
     display: flex;
     flex-direction: column;
-    padding: 40px 30px;
+    padding: 30px 30px 20px;
 }
 
 .projects .card .text{
     display: -webkit-box;
-    -webkit-line-clamp: 6;
+    -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    color: rgb(93, 93, 93);
+    
 }
 
 .project_container .card .title{
@@ -273,8 +277,15 @@ form button{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
 }
 
 .projects .card .options{
     align-self: flex-end;
+}
+
+.projects .card .title_text{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
