--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ form button{
     grid-row: 2/3;
     grid-column: 2/-1;
     padding-right: 40px;
-
+    box-shadow: 0 4px 0 rgba(0, 0,0, 0.1);
 }
 
 .container .top_part_second_part .user{
@@ -170,7 +170,7 @@ form button{
     display: flex;
     
     align-items: center;
-    gap: 40px;
+    gap: 20px;
     padding: 5px;
     padding-left: 40px;
 }
@@ -261,6 +261,7 @@ form button{
     justify-content: space-evenly;
 }
 
+
 .body_announcements .second{
     border-top: 1px solid rgb(153, 152, 152);
     border-bottom: 1px solid rgb(153, 152, 152);
@@ -282,6 +283,40 @@ form button{
  text-overflow: ellipsis;
  font-size: 15px;
 }
+
+.trending .trending_element{
+    display: flex;
+    gap: 20px;
+}
+
+.trending .trending_element .text{
+    color: var(--color-text-body);
+}
+
+.trending .trending_element .userbox{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.trending .trending_element .user{
+    font-weight: 600;
+}
+
+.trending .trending_element .icon{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    width: 50px;
+}
+
+.trending .trending_element img{
+    height: 100%;
+    width: 100%;
+}
+
 
 /* Responsive section */
 .project_container .projects {
